login e logout OK

--- a/package.json
+++ b/package.json
@@ -97,7 +97,12 @@
         "plugins": [
           [
             "react-native-web"
-          ]
+            
+          ],
+          ["transform-runtime", {
+            "polyfill": false,
+            "regenerator": true
+          }]
         ]
       },
       "production-web": {
