--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,10 +98,10 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.login"
+        applicationId "com.login.lcpg"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
